Replace jakarta dependency with java.util.Base64